# mlp_project

./: .gitignore  CMakeLists.txt  README.md  activation_functions.h  aula.txt  layer.h  loss_functions.h  main.cpp  mlp.h  mlp_xor  package-lock.json  package.json  tsconfig.electron.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yaml
cpp/: CsvReader.cpp  CsvReader.h  MainWindow.cpp  MainWindow.h  main.cpp
data/: teste_02.csv  teste_04.csv  teste_05.csv  tete_03.csv
electron/: main.ts  preload.js  preload.ts
frontend/: index.html
frontend/src/: App.tsx  styles.css  vite-env.d.ts
